# portfolio

./: .env.example  Cargo.toml  LICENSE  README.md  build.sh  justfile  rusfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  zizmor.yml
blog-gen/: Cargo.toml
blog-gen/src/: main.rs
content/blog/: hello-world.md
content/blog/onion-message-jamming/: index.md
example/: cert.pem  key.pem
featherserve/: Cargo.toml
featherserve/src/: cache.rs  handler.rs  lib.rs  request.rs  response.rs  server.rs  tls.rs
pages/: 404.html  index.html
pool/: Cargo.toml
pool/src/: lib.rs
src/: lib.rs  main.rs
static/: 404.html  books.html  index.html  pubkey.asc  robots.txt  sitemap.xml  style.css
static/about/: index.html
static/blog/: feed.xml  index.html
static/blog/hello-world/: index.html
static/blog/onion-message-jamming/: index.html
static/contact/: index.html
templates/: home.html  list.html  post.html
