[package]
name = "featherserve"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
dotenvy = "0.15.7"
flate2 = "1.1.5"
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1.52.1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
tokio-rustls = "0.26.4"
